--- a/index.css
+++ b/index.css
@@ -1,37 +1,42 @@
+body{
+  padding: 0;
+  margin:0;
+  background-image: url(weather.png);
+  background-repeat: repeat;
+}
 .clear {
     clear: both;
 }
 #wrapper{
-  padding: 0em 0em;
+  padding: 1em 0em;
 }
 @media screen and (min-width: 800px){
   #wrapper{
-    padding: 0em 2em;
+    padding: 1em 2em;
   }
 }
 @media screen and (min-width: 1400px){
   #wrapper{
-    padding: 0em 8em;
+    padding: 1em 10em;
   }
 }
 #container {
-    background: #fdfdfd;
+    background: #e9f5fb;
     box-shadow: 0px 0px 2px 2px #eaeae9;
     -webkit-box-shadow: 0px 0px 2px 2px #eaeae9;;
     margin: 20px 10px;
 }
 #nav {
-    background: #f58509;
-    background: -webkit-linear-gradient(#f59506, #b76108, #ff8f04);
-    background: -o-linear-gradient(#f59506, #b76108, #ff8f04);
-    background: -moz-linear-gradient(#f59506, #b76108, #ff8f04);
-    background: linear-gradient(#f59506, #b76108, #ff8f04);
+    background: #128aa6;
+    background: -webkit-linear-gradient(#289ab7, #012129, #128aa6);
+    background: -o-linear-gradient(#289ab7, #012129, #128aa6);
+    background: -moz-linear-gradient(#289ab7, #012129, #128aa6);
+    background: linear-gradient(#289ab7, #012129, #128aa6);
     padding: 5px 10px 5px 10px;
     float: left;
     border-radius: 5px;
     width: 99%;
     color: aliceblue;
-    box-shadow: -2px 2px 2px 2px #b79062;
     font-size: 110%;
 }
 #news {
@@ -55,6 +60,8 @@
     color: #666;
 }
 #news span:first-of-type {
-    color: #1d1c1c;
     font-size: 100%;
+}
+ol{
+  color:#666;
 }
